--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		      <li><b>Discussion Points:</b> Include at least two discussion points to bring up in class.</li>
 		    </ul>
 		    <p>You will be expected to scribe at least one lecture&#8217;s notes. <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/example-scribe-notes.tex">Here is an example</a> to use as a template (in LaTeX).</p>
-		    <p>TA: <a href="mailto:aabhinav@cs.umass.edu">Abhinav Jangda</a> - W 4-5pm, CS207</p>
+		    <p>TA: <a href="mailto:aabhinav@cs.umass.edu">Abhinav Jangda</a> - W 4-5pm, TBD</p>
 		  </div>
 		</div>
 
@@ -100,7 +100,7 @@
 
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, September 03
+Wednesday, January 26
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -110,7 +110,7 @@ Introduction
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, September 05
+Monday, January 31
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -123,7 +123,7 @@ Compilers
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, September 10
+Wednesday, February 02
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -136,14 +136,7 @@ Programming Languages
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-<font color="red">
-Thursday, September 12
- &mdash; no class
-</font>
-</h4></div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, September 17
+Monday, February 07
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -154,14 +147,7 @@ Runtime Systems
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-<font color="red">
-Thursday, September 19
- &mdash; no class
-</font>
-</h4></div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, September 24
+Wednesday, February 09
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -174,7 +160,7 @@ Computer Architecture
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, September 26
+Monday, February 14
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -187,7 +173,7 @@ Multicore And Parallelism
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, October 01
+Wednesday, February 16
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -200,7 +186,7 @@ Hardware/Software Interface
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, October 03
+Monday, February 21
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -211,7 +197,7 @@ Concurrency
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, October 08
+Wednesday, February 23
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -222,7 +208,7 @@ Os Design And Internals
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, October 10
+Monday, February 28
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -234,18 +220,18 @@ Networked Systems Principles
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 <font color="red">
-Wednesday, October 16
+Wednesday, March 02
  &mdash; Midterm
 </font>
 </h4></div>
 <div class="card-body">
 <h5><em>
-ILC S140, 7:00pm-9:00pm
+
 </em></h5>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, October 17
+Monday, March 07
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -258,38 +244,27 @@ Security
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 <font color="red">
-Tuesday, October 22
+Wednesday, March 09
+ &mdash; <a href="">TBD</a>
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+<font color="red">
+Monday, March 14
  &mdash; no class
 </font>
 </h4></div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 <font color="red">
-Thursday, October 24
+Wednesday, March 16
  &mdash; no class
 </font>
 </h4></div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-<font color="red">
-Monday, October 28
- &mdash; <a href="https://docs.google.com/document/d/1ryGR0CU6r39Uv6s062ftf15Jy8yndlrAQoia86rypDk/edit?usp=sharing">Smash, A Compacting Memory Allocator</a>
-</font>
-</h4></div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, October 29
-</h4></div>
-<div class="card-body">
-<h5><em>
-Cryptography
-</em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/Rsapaper.pdf">A Method for Obtaining Digital Signatures and Public Key Cryptosystems</a>, RSA <font color="red">[review]</font><br/>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, October 31
+Monday, March 21
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -301,7 +276,7 @@ Fault-Tolerance (Hardware)
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, November 05
+Wednesday, March 23
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -314,7 +289,7 @@ Failure-Oblivious Computing</a>, Rinard et al. <font color="red">[review]</font>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, November 07
+Monday, March 28
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -326,7 +301,7 @@ Performance Analysis
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, November 12
+Wednesday, March 30
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -338,14 +313,7 @@ Static & Dynamic Analysis
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-<font color="red">
-Thursday, November 14
- &mdash; no class
-</font>
-</h4></div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, November 19
+Monday, April 04
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -357,7 +325,7 @@ Testing
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, November 21
+Wednesday, April 06
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -368,7 +336,7 @@ Distributed Systems
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, December 03
+Monday, April 11
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -379,41 +347,78 @@ Distributed Systems
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, December 05
+Wednesday, April 13
 </h4></div>
 <div class="card-body">
 <h5><em>
-Catch-Up
+Tbd
 </em></h5>
 </div>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 <font color="red">
-Sunday, December 08
- &mdash; <a href="https://docs.google.com/document/d/1-bqe5SRXHi19vII_plXKIzp3urI-SgJLGQiQT1Is8Bo/edit?usp=sharing">SnakeProf, A Space and Time Profiler for Python</a>
+Monday, April 18
+ &mdash; no class
 </font>
 </h4></div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, December 10
+Wednesday, April 20
 </h4></div>
 <div class="card-body">
 <h5><em>
-Catch-Up
+Tbd
+</em></h5>
+</div>
+</div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Monday, April 25
+</h4></div>
+<div class="card-body">
+<h5><em>
+Tbd
+</em></h5>
+</div>
+</div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Wednesday, April 27
+</h4></div>
+<div class="card-body">
+<h5><em>
+Tbd
+</em></h5>
+</div>
+</div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Monday, May 02
+</h4></div>
+<div class="card-body">
+<h5><em>
+Tbd
 </em></h5>
 </div>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 <font color="red">
-Friday, December 13
+Wednesday, May 04
+ &mdash; <a href="">TBD</a>
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+<font color="red">
+Monday, May 09
  &mdash; Final
 </font>
 </h4></div>
 <div class="card-body">
 <h5><em>
-ILC S140, 1:00pm-3:00pm
+
 </em></h5>
 </div>
 			</td>
