--- a/header.html
+++ b/header.html
@@ -65,7 +65,7 @@
 		    
 		    <p>This course can be used to satisfy core requirements for Systems for the M.S. and PhD degrees.</p>
 		    <p>Grades will be based on in-class participation, projects, and exams.<br />
-		      You must submit your reviews <b><a href="https://umass-systems19.hotcrp.com/">via the review submission site</a></b> <em>before each class</em>. <strong>Do not modify and re-submit your reviews: just submit once.</strong></p>
+		      You must submit your reviews <b><a href="https://umass-gradsys22.hotcrp.com/">via the review submission site</a></b> <em>before each class</em>. <strong>Do not modify and re-submit your reviews: just submit once.</strong></p>
 		    <p>See <a href="http://www.cs.berkeley.edu/~fox/paper_writing.html#rev">these notes by John Ousterhout</a> on writing reviews. Focus on the positive: these are classics for a reason!</p>
 		    <p>Your reviews must address the following points:</p>
 		    <ul>
@@ -74,7 +74,7 @@
 		      <li><b>Discussion Points:</b> Include at least two discussion points to bring up in class.</li>
 		    </ul>
 		    <p>You will be expected to scribe at least one lecture&#8217;s notes. <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/example-scribe-notes.tex">Here is an example</a> to use as a template (in LaTeX).</p>
-		    <p>TA: <a href="mailto:aabhinav@cs.umass.edu">Abhinav Jangda</a> - W 4-5pm, TBD</p>
+		    <p>TA: <a href="mailto:aabhinav@cs.umass.edu">Abhinav Jangda</a>TBD</p>
 		  </div>
 		</div>
 
