--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 		    <p>Grades will be based on in-class participation, projects, and exams.<br />
 		      You must submit your reviews <b><a href="https://umass-gradsys22.hotcrp.com/">via the review submission site</a></b> <em>before each class</em>. <strong>Do not modify and re-submit your reviews: just submit once.</strong></p>
 		    <p>See <a href="http://www.cs.berkeley.edu/~fox/paper_writing.html#rev">these notes by John Ousterhout</a> on writing reviews. Focus on the positive: these are classics for a reason!</p>
+		    <p>Here are two examples of reviews: the first is a real conference review for a paper you will be reading, and the second is a real student review for this class that you should use a model: <b><a href="example-reviews.pdf">Example reviews</a></b>
 		    <p>Your reviews must address the following points:</p>
 		    <ul>
 		      <li><b>Summary:</b> (at least two paragraphs) What is the problem that this work addressed? What are the big ideas / key insights / technical contributions?</li>
@@ -74,7 +75,7 @@
 		      <li><b>Discussion Points:</b> Include at least two discussion points to bring up in class.</li>
 		    </ul>
 		    <p>You will be expected to scribe at least one lecture&#8217;s notes. <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/example-scribe-notes.tex">Here is an example</a> to use as a template (in LaTeX).</p>
-		    <p>TA: <a href="mailto:aabhinav@cs.umass.edu">Abhinav Jangda</a>TBD</p>
+		    <p>TA: <a href="mailto:aabhinav@cs.umass.edu">Abhinav Jangda</a>: day and time TBD</p>
 		  </div>
 		</div>
 
