--- a/index.html
+++ b/index.html
@@ -273,10 +273,8 @@ Monday, March 21
 </h4></div>
 <div class="card-body">
 <h5><em>
-Fault-Tolerance (Hardware)
+(Midterm Review)
 </em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/RAID.pdf">A Case for Redundant Arrays of Inexpensive Disks (RAID)</a>, Patterson, Gibson & Katz <font color="red">[review]</font><br/>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/gray-85.pdf">Why Do Computers Stop and What Can Be Done About It?</a>, Gray <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -292,6 +290,28 @@ Wednesday, March 23
 </h4></div>
 <div class="card-body">
 <h5><em>
+(Catch-Up)
+</em></h5>
+</div>
+</div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Monday, March 28
+</h4></div>
+<div class="card-body">
+<h5><em>
+Fault-Tolerance (Hardware)
+</em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/RAID.pdf">A Case for Redundant Arrays of Inexpensive Disks (RAID)</a>, Patterson, Gibson & Katz <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/gray-85.pdf">Why Do Computers Stop and What Can Be Done About It?</a>, Gray <font color="red">[review]</font><br/>
+</div>
+</div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Wednesday, March 30
+</h4></div>
+<div class="card-body">
+<h5><em>
 Fault-Tolerance (Software)
 </em></h5>
 <a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/rinard.pdf">Enhancing Server Availability and Security Through
@@ -301,38 +321,13 @@ Failure-Oblivious Computing</a>, Rinard et al. <font color="red">[review]</font>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, March 28
+Monday, April 04
 </h4></div>
 <div class="card-body">
 <h5><em>
 Performance Analysis
 </em></h5>
 <a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/gprof.pdf">GProf: A Call-Graph Execution Profiler</a>, Graham et al. <font color="red">[review]</font><br/>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/coz.pdf">Coz: Finding Code that Counts with Causal Profiling</a>, Curtsinger & Berger <font color="red">[review]</font><br/>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, March 30
-</h4></div>
-<div class="card-body">
-<h5><em>
-Static & Dynamic Analysis
-</em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/coverity.pdf">A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World</a>, Engler et al. <font color="red">[review]</font><br/>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/valgrind.pdf">Valgrind: A Framework for Heavyweight Dynamic Binary Instrumentation</a>, Nethercote & Seward <font color="red">[review]</font><br/>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, April 04
-</h4></div>
-<div class="card-body">
-<h5><em>
-Testing
-</em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/fuzz.pdf">An empirical study of the reliability of UNIX utilities</a>, Miller et al. <font color="red">[review]</font><br/>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/dart.pdf">DART: Directed Automated Random Testing</a>, Goderfroid et al. <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -341,9 +336,9 @@ Wednesday, April 06
 </h4></div>
 <div class="card-body">
 <h5><em>
-Distributed Systems
+Performance Analysis
 </em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/bitcoin.pdf">Bitcoin: A Peer-to-Peer Electronic Cash System</a>, Satoshi Nakamoto <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/coz.pdf">Coz: Finding Code that Counts with Causal Profiling</a>, Curtsinger & Berger <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -352,9 +347,9 @@ Monday, April 11
 </h4></div>
 <div class="card-body">
 <h5><em>
-Distributed Systems
+Static Analysis
 </em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/raft.pdf">In Search of an Understandable Consensus Algorithm</a>, Ongaro and Ousterhout <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/coverity.pdf">A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World</a>, Engler et al. <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -363,8 +358,9 @@ Wednesday, April 13
 </h4></div>
 <div class="card-body">
 <h5><em>
-Tbd
+Dynamic Analysis
 </em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/valgrind.pdf">Valgrind: A Framework for Heavyweight Dynamic Binary Instrumentation</a>, Nethercote & Seward <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -380,8 +376,9 @@ Wednesday, April 20
 </h4></div>
 <div class="card-body">
 <h5><em>
-Tbd
+Testing
 </em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/dart.pdf">DART: Directed Automated Random Testing</a>, Goderfroid et al. <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -390,8 +387,9 @@ Monday, April 25
 </h4></div>
 <div class="card-body">
 <h5><em>
-Tbd
+Distributed Systems
 </em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/bitcoin.pdf">Bitcoin: A Peer-to-Peer Electronic Cash System</a>, Satoshi Nakamoto <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -400,8 +398,9 @@ Wednesday, April 27
 </h4></div>
 <div class="card-body">
 <h5><em>
-Tbd
+Distributed Systems
 </em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/raft.pdf">In Search of an Understandable Consensus Algorithm</a>, Ongaro and Ousterhout <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
