--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@ Tbd
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 <font color="red">
-Wednesday, May 04
- &mdash; <a href="">TBD</a>
+Monday, April 18
+ &mdash; <a href="">Project 2: undofs</a>
 </font>
 </h4></div>
 <div class="card mb-12">
