--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		      <li><b>Discussion Points:</b> Include at least two discussion points to bring up in class.</li>
 		    </ul>
 		    <p>You will be expected to scribe at least one lecture&#8217;s notes. <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/example-scribe-notes.tex">Here is an example</a> to use as a template (in LaTeX).</p>
-		    <p>TA: <a href="mailto:aabhinav@cs.umass.edu">Abhinav Jangda</a>: Tuesday 1-2pm, CS 207 (cube 4)</p>
+		    <p>TA: <a href="mailto:jpizzorno@cs.umass.edu">Juan Altmayer Pizzorno</a>: Thursday 1:30-2:30pm, CS 207</p>
 		  </div>
 		</div>
 
