--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, January 26
+Tuesday, February 07
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -111,7 +111,7 @@ Introduction
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, January 31
+Thursday, February 09
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -124,7 +124,7 @@ Compilers
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, February 02
+Tuesday, February 14
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -137,7 +137,7 @@ Programming Languages
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, February 07
+Thursday, February 16
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -148,7 +148,7 @@ Runtime Systems
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, February 09
+Tuesday, February 21
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -161,7 +161,7 @@ Computer Architecture
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, February 14
+Thursday, February 23
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -174,7 +174,7 @@ Multicore And Parallelism
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, February 16
+Tuesday, February 28
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -187,7 +187,7 @@ Hardware/Software Interface
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, February 21
+Thursday, March 02
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -198,7 +198,7 @@ Concurrency
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, February 23
+Tuesday, March 07
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -209,7 +209,7 @@ Os Design And Internals
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, February 28
+Thursday, March 09
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -221,18 +221,20 @@ Networked Systems Principles
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 <font color="red">
-Wednesday, March 02
- &mdash; Midterm
+Tuesday, March 14
+ &mdash; no class
 </font>
 </h4></div>
-<div class="card-body">
-<h5><em>
-
-</em></h5>
-</div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, March 07
+<font color="red">
+Thursday, March 16
+ &mdash; no class
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Tuesday, March 21
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -244,7 +246,26 @@ Security
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, March 09
+<font color="red">
+Thursday, March 23
+ &mdash; Exam 1
+</font>
+</h4></div>
+<div class="card-body">
+<h5><em>
+
+</em></h5>
+</div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+<font color="red">
+Tuesday, March 28
+ &mdash; no class
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Thursday, March 30
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -256,47 +277,23 @@ Cryptography
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 <font color="red">
-Monday, March 14
- &mdash; no class
+Friday, March 31
+ &mdash; <a href="">Project 1: TBD</a>
 </font>
 </h4></div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-<font color="red">
-Wednesday, March 16
- &mdash; no class
-</font>
-</h4></div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, March 21
+Tuesday, April 04
 </h4></div>
 <div class="card-body">
 <h5><em>
-(Midterm Review)
+Exam 1 Review
 </em></h5>
 </div>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-<font color="red">
-Monday, March 21
- &mdash; <a href="https://docs.google.com/document/d/18cuxseKMA3g-LT1QNu-yIGXyZfYas3vWT6ZEeEyYv8g/edit?usp=sharing">Project 1: wasm-gc</a>
-</font>
-</h4></div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, March 23
-</h4></div>
-<div class="card-body">
-<h5><em>
-(Catch-Up)
-</em></h5>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, March 28
+Thursday, April 06
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -308,7 +305,7 @@ Fault-Tolerance (Hardware)
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, March 30
+Tuesday, April 11
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -321,29 +318,26 @@ Failure-Oblivious Computing</a>, Rinard et al. <font color="red">[review]</font>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, April 04
+Thursday, April 13
 </h4></div>
 <div class="card-body">
 <h5><em>
 Performance Analysis
 </em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/gprof.pdf">GProf: A Call-Graph Execution Profiler</a>, Graham et al. <font color="red">[review]</font><br/>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, April 06
-</h4></div>
-<div class="card-body">
-<h5><em>
-Performance Analysis
-</em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/gprof.pdf">GProf: A Call-Graph Execution Profiler</a>, Graham et al. [read]<br/>
 <a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/coz.pdf">Coz: Finding Code that Counts with Causal Profiling</a>, Curtsinger & Berger <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, April 11
+<font color="red">
+Tuesday, April 18
+ &mdash; no class
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Thursday, April 20
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -354,7 +348,21 @@ Static Analysis
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, April 13
+<font color="red">
+Tuesday, April 25
+ &mdash; no class
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+<font color="red">
+Thursday, April 27
+ &mdash; no class
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Tuesday, May 02
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -365,25 +373,19 @@ Dynamic Analysis
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-<font color="red">
-Monday, April 18
- &mdash; no class
-</font>
-</h4></div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, April 20
+Thursday, May 04
 </h4></div>
 <div class="card-body">
 <h5><em>
 Testing
 </em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/fuzz.pdf">An empirical study of the reliability of UNIX utilities</a>, Miller et al. [read]<br/>
 <a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/dart.pdf">DART: Directed Automated Random Testing</a>, Goderfroid et al. <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, April 25
+Tuesday, May 09
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -394,7 +396,7 @@ Distributed Systems
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Wednesday, April 27
+Thursday, May 11
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -405,26 +407,9 @@ Distributed Systems
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Monday, May 02
-</h4></div>
-<div class="card-body">
-<h5><em>
-(Catch-Up)
-</em></h5>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 <font color="red">
-Tuesday, April 19
- &mdash; <a href="">Project 2: undofs</a>
-</font>
-</h4></div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-<font color="red">
-Monday, May 09
- &mdash; Final
+Tuesday, May 16
+ &mdash; Exam 2
 </font>
 </h4></div>
 <div class="card-body">
@@ -432,6 +417,13 @@ Monday, May 09
 
 </em></h5>
 </div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+<font color="red">
+Friday, May 19
+ &mdash; <a href="">Project 2: TBD</a>
+</font>
+</h4></div>
 			</td>
 		      </tr>
 		    </table>
