Updated in light of snow days.

--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
 
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+<font color="red">
+Monday, February 28
+ &mdash; no class
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 Tuesday, February 07
 </h4></div>
 <div class="card-body">
@@ -161,7 +168,14 @@ Computer Architecture
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+<font color="red">
 Thursday, February 23
+ &mdash; no class
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Thursday, March 02
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -174,7 +188,7 @@ Multicore And Parallelism
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, February 28
+Tuesday, March 07
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -187,35 +201,13 @@ Hardware/Software Interface
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, March 02
+Thursday, March 09
 </h4></div>
 <div class="card-body">
 <h5><em>
 Concurrency
 </em></h5>
 <a href="http://www.cs.umass.edu/~emery/classes/cmpsci691st/readings/Conc/Mesa.pdf">Experience with Processes and Monitors in Mesa</a>, Lampson & Redell  <font color="red">[review]</font><br/>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, March 07
-</h4></div>
-<div class="card-body">
-<h5><em>
-Os Design And Internals
-</em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/unix.pdf">The Evolution of the UNIX Time-Sharing System</a>, Ritchie & Thompson <font color="red">[review]</font><br/>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, March 09
-</h4></div>
-<div class="card-body">
-<h5><em>
-Networked Systems Principles
-</em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/hints.pdf">Hints for Computer System Design</a>, Lampson <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -238,10 +230,9 @@ Tuesday, March 21
 </h4></div>
 <div class="card-body">
 <h5><em>
-Security
+Os Design And Internals
 </em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/lampson73.pdf">A Note on the Confinement Problem</a>, Lampson <font color="red">[review]</font><br/>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/spectre.pdf">Spectre Attacks: Exploiting Speculative Execution</a>, Many People <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/unix.pdf">The Evolution of the UNIX Time-Sharing System</a>, Ritchie & Thompson <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -265,7 +256,44 @@ Tuesday, March 28
 </h4></div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+<font color="red">
 Thursday, March 30
+ &mdash; no class
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Tuesday, April 04
+</h4></div>
+<div class="card-body">
+<h5><em>
+Networked Systems Principles
+</em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/hints.pdf">Hints for Computer System Design</a>, Lampson <font color="red">[review]</font><br/>
+</div>
+</div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Thursday, April 06
+</h4></div>
+<div class="card-body">
+<h5><em>
+Security
+</em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/lampson73.pdf">A Note on the Confinement Problem</a>, Lampson <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/spectre.pdf">Spectre Attacks: Exploiting Speculative Execution</a>, Many People <font color="red">[review]</font><br/>
+</div>
+</div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+<font color="red">
+Friday, April 07
+ &mdash; <a href="">Project 1: Ouroboros</a>
+</font>
+</h4></div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Tuesday, April 11
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -276,24 +304,7 @@ Cryptography
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-<font color="red">
-Friday, March 31
- &mdash; <a href="">Project 1: TBD</a>
-</font>
-</h4></div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, April 04
-</h4></div>
-<div class="card-body">
-<h5><em>
-Exam 1 Review
-</em></h5>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, April 06
+Thursday, April 13
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -301,31 +312,6 @@ Fault-Tolerance (Hardware)
 </em></h5>
 <a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/RAID.pdf">A Case for Redundant Arrays of Inexpensive Disks (RAID)</a>, Patterson, Gibson & Katz <font color="red">[review]</font><br/>
 <a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/gray-85.pdf">Why Do Computers Stop and What Can Be Done About It?</a>, Gray <font color="red">[review]</font><br/>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, April 11
-</h4></div>
-<div class="card-body">
-<h5><em>
-Fault-Tolerance (Software)
-</em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/rinard.pdf">Enhancing Server Availability and Security Through
-Failure-Oblivious Computing</a>, Rinard et al. <font color="red">[review]</font><br/>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/fp014-berger.pdf">DieHard: Probabilistic Memory Safety for Unsafe Languages</a>, Berger and Zorn <font color="red">[review]</font><br/>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, April 13
-</h4></div>
-<div class="card-body">
-<h5><em>
-Performance Analysis
-</em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/gprof.pdf">GProf: A Call-Graph Execution Profiler</a>, Graham et al. [read]<br/>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/coz.pdf">Coz: Finding Code that Counts with Causal Profiling</a>, Curtsinger & Berger <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -341,9 +327,10 @@ Thursday, April 20
 </h4></div>
 <div class="card-body">
 <h5><em>
-Static Analysis
+Performance Analysis
 </em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/coverity.pdf">A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World</a>, Engler et al. <font color="red">[review]</font><br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/gprof.pdf">GProf: A Call-Graph Execution Profiler</a>, Graham et al. [read]<br/>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/coz.pdf">Coz: Finding Code that Counts with Causal Profiling</a>, Curtsinger & Berger <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
@@ -366,6 +353,17 @@ Tuesday, May 02
 </h4></div>
 <div class="card-body">
 <h5><em>
+Static Analysis
+</em></h5>
+<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/coverity.pdf">A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World</a>, Engler et al. <font color="red">[review]</font><br/>
+</div>
+</div>
+<div class="card mb-12">
+<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
+Thursday, May 04
+</h4></div>
+<div class="card-body">
+<h5><em>
 Dynamic Analysis
 </em></h5>
 <a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/valgrind.pdf">Valgrind: A Framework for Heavyweight Dynamic Binary Instrumentation</a>, Nethercote & Seward <font color="red">[review]</font><br/>
@@ -373,7 +371,7 @@ Dynamic Analysis
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, May 04
+Tuesday, May 09
 </h4></div>
 <div class="card-body">
 <h5><em>
@@ -385,30 +383,8 @@ Testing
 </div>
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Tuesday, May 09
-</h4></div>
-<div class="card-body">
-<h5><em>
-Distributed Systems
-</em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/bitcoin.pdf">Bitcoin: A Peer-to-Peer Electronic Cash System</a>, Satoshi Nakamoto <font color="red">[review]</font><br/>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
-Thursday, May 11
-</h4></div>
-<div class="card-body">
-<h5><em>
-Distributed Systems
-</em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/raft.pdf">In Search of an Understandable Consensus Algorithm</a>, Ongaro and Ousterhout <font color="red">[review]</font><br/>
-</div>
-</div>
-<div class="card mb-12">
-<div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 <font color="red">
-Tuesday, May 16
+Thursday, May 11
  &mdash; Exam 2
 </font>
 </h4></div>
