RSA to Bitcoin.

--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@ Tuesday, April 11
 </h4></div>
 <div class="card-body">
 <h5><em>
-Cryptography
+Distributed Systems
 </em></h5>
-<a href="https://github.com/emeryberger/COMPSCI-630/raw/master/papers/Rsapaper.pdf">A Method for Obtaining Digital Signatures and Public Key Cryptosystems</a>, RSA <font color="red">[review]</font><br/>
+<a href="https://bitcoin.org/bitcoin.pdf">Bitcoin: A Peer-to-Peer Electronic Cash System</a>, Bitcoin <font color="red">[review]</font><br/>
 </div>
 </div>
 <div class="card mb-12">
