--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@ Thursday, May 11
 <div class="card mb-12">
 <div class="card-header"><h4 id="users" class="my-0 font-weight-normal">
 <font color="red">
-Friday, May 19
- &mdash; <a href="">Project 2: TBD</a>
+Wednesday, May 17
+ &mdash; <a href="">Project 2: Cyprompt</a>
 </font>
 </h4></div>
 			</td>
